# OpenGLRenderer

./: .gitmodules  CMakeLists.txt  README.md
Assets/shaders/: basic.fs  basic.vs
cmake-modules/: FindASSIMP.cmake
src/: main.cpp
src/Config/: Config.h.in
src/Core/: Log.cpp  Log.h  camera.cpp  camera.h  mesh.cpp  mesh.h  object.cpp  object.h  shader.cpp  shader.h
